# scancode-toolkit-contrib

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  NOTICE  README.md  README.rst  appveyor.yml  setup.cfg  setup.py
etc/conf/: base.py
etc/release/: MANIFEST.in.release
etc/scripts/: irc-notify.py
src/compiledcode/: __init__.py  dwarf.py  dwarf2.py  dwarf3.py  elf.py  gwt.py  macho.py  makedepend.py  pdb.py
src/compiledcode/javaclass/: classdiff.py  jardiff.py  javaclass.ABOUT  javaclass.README  javaclass.py
src/packagedcode2/: cpan.py  formats.py  gemfile_lock.ABOUT  gemfile_lock.py  godeps.py  rubygems.py  rubygems_dumpspec.rb  rubygems_index.rb  win_pe.py
src/samecode/: halohash.py  hash.py
src/sourcecode/: __init__.py  classify.py  kernel.py  metrics.py  source.py
tests/: private_test_utils.py
tests/compiledcode/: test_dwarf.py  test_dwarf2.py  test_dwarf3.py  test_elf.py  test_gwt.py  test_makedepend.py
tests/compiledcode/data/elf/: libelf.so.expected_elf_relocatable_symbols  libelf.so.expected_elf_symbols
tests/compiledcode/data/makedepend/alternate/: makedep.d
tests/compiledcode/data/makedepend/d_dep_files/: string2key.d  string2key.expected
tests/compiledcode/data/misc_elfs/: cpp-test.o.expected_elf_symbols
tests/packagedcode2/: test_gemfile_lock.py  test_godeps.py  test_rubygems.py  test_win_pe.py
tests/samecode/: test_halohash.py
tests/sourcecode/: test_classify.py  test_kernel.py  test_metrics.py  test_source.py
tests/sourcecode/data/kernel/: include-linux-module.c
tests/todo_license/: README
(+21 files in other folders)
