[metadata]
license_file = NOTICE

[aliases]
# no upload for now, no bdist_wheel
release = clean --all sdist --formats=bztar,zip bdist_wheel


[tool:pytest]
testpaths =
    src
    tests
    etc

norecursedirs =
    .git
    bin
    dist
    build
    _build
    local
    docs
    man
    share
    samples
    .cache
    .settings
    Include
    include
    Lib
    lib
    thirdparty
    tmp
    src/*/data
    tests/*/data

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict
    --ignore setup.py
    --doctest-modules
